--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "jsl-vue-h5-demo",
-  "version": "0.0.10",
-  "description": "some Vue.js components and plugins for mobile H5 development",
-  "author": "8bulbs <atbulbs@gmail.com>",
-  "private": false,
+  "version": "1.0.0",
+  "description": "A Vue.js project",
+  "author": "8bulbs atbulbs@gmail.com",
+  "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --inline --progress --config build/webpack.config.js",
     "start": "npm run dev",
     "build": "npm run clean && npm run build:dev",
     "build:dev": "cross-env NODE_ENV=production webpack --config build/webpack.config.js",
-    "clean": "rimraf dist && rimraf dist.zip && rimraf *.tgz",
+    "clean": "rimraf dist && rimraf dist.zip",
     "lint": "eslint --ext .js --ext .jsx --ext .vue src/",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
     "precommit": "npm run lint-fix"
   },
-  "license": "MIT",
   "dependencies": {
-    "jsl-vue-h5": "0.0.17",
+    "babel-polyfill": "^6.26.0",
+    "fastclick": "^1.0.6",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-lazyload": "^1.2.6",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.1.0",
@@ -56,9 +58,9 @@
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "portfinder": "^1.0.16",
     "postcss-aspect-ratio-mini": "0.0.2",
-    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^5.3.0",
     "postcss-px-to-viewport": "0.0.3",
     "postcss-url": "^8.0.0",
     "postcss-viewport-units": "^0.1.4",
